fix cross icon color fix items alignment in flex container

--- a/airbyte-webapp/src/components/connection/CatalogTree/next/StreamDetailsPanel/StreamPanelHeader/StreamPanelHeader.module.scss
+++ b/airbyte-webapp/src/components/connection/CatalogTree/next/StreamDetailsPanel/StreamPanelHeader/StreamPanelHeader.module.scss
@@ -2,12 +2,13 @@
 @use "scss/variables";
 
 .container {
-  border-radius: 10px;
+  border-radius: variables.$spacing-md;
   margin: variables.$spacing-md variables.$spacing-lg;
   background-color: colors.$grey-50;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 
   & > :not(button) {
     padding: variables.$spacing-md;
@@ -32,4 +33,10 @@
 .streamPropValue {
   display: inline;
   margin-left: variables.$spacing-sm;
+}
+
+.crossIcon {
+  svg {
+    color: colors.$dark-blue;
+  }
 }
